[project]
name = "odoo-bringout-oca-stock-logistics-availability-sale_stock_available_info_popup"
version = "16.0.0"
description = "Sale Stock Available Info Popup - Adds an 'Available to promise' quantity to the popover shown in sale order line that display stock info of the product"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-stock-logistics-availability-sale_stock>=16.0.0",
    "odoo-bringout-oca-stock-logistics-availability-stock_available>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["sale_stock_available_info_popup"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
