[project]
name = "odoo-bringout-oca-stock-logistics-availability-stock_available_exclude_location"
version = "16.0.0"
description = "Stock Available Exclude Location - 
        Exclude locations for product available quantities"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-stock-logistics-availability-stock_available_base_exclude_location>=16.0.0",
    "odoo-bringout-oca-stock-logistics-availability-stock_location_children>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["stock_available_exclude_location"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
